--- a/src/app.pcss
+++ b/src/app.pcss
@@ -74,5 +74,6 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-family: "Montserrat Variable", "Times New Roman", sans-serif;
   }
 }
