--- a/src/app.pcss
+++ b/src/app.pcss
@@ -50,7 +50,7 @@
     --card-foreground: 210 40% 98%;
  
     --border: 0 0% 9%;
-    --input: 217.2 32.6% 17.5%;
+    --input: 0 0% 9%;
  
     --primary: 84 94% 57%;
     --primary-foreground: 222.2 47.4% 11.2%;
@@ -64,7 +64,7 @@
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
  
-    --ring: hsl(212.7, 26.8%,83.9);
+    --ring: 212.7, 26.8%,83.9;
   }
 }
  
